--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
     ports:
       - "5173:5173"   # Nicht 3000, sondern Vite-Standard
     volumes:
-      - ./frontend:/app
+      - ./frontend:/app:cached
+      - /app/node_modules
     restart: unless-stopped
-
 
   vllm:
     image: vllm/vllm-openai:latest
